--- a/drilonportfolio-spa/tsconfig.json
+++ b/drilonportfolio-spa/tsconfig.json
@@ -34,8 +34,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
-  ],
+    "tests/**/*.tsx",
+     "src/main.ts"  ],
   "exclude": [
     "node_modules"
   ]
